--- a/SmartMonitoring/SmartMonitoring.csproj
+++ b/SmartMonitoring/SmartMonitoring.csproj
@@ -211,6 +211,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\IRepository.cs" />
     <Compile Include="schd_schedulers_data.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
