--- a/SmartMonitoring/SmartMonitoring.csproj
+++ b/SmartMonitoring/SmartMonitoring.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Management" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -212,6 +213,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Repository\ServerRepository.cs" />
     <Compile Include="schd_schedulers_data.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
