duplication and some enhancements

--- a/SmartMonitoring/App.config
+++ b/SmartMonitoring/App.config
@@ -8,8 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <connectionStrings>
-    <add name="SmartMonitoringEntities" connectionString="metadata=res://*/SmartMonitoringModel.csdl|res://*/SmartMonitoringModel.ssdl|res://*/SmartMonitoringModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-A0PSS5C;initial catalog=SmartMonitoring;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="SmartMonitoringEntities1" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-A0PSS5C;initial catalog=SmartMonitoring;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="SmartMonitoringEntities" connectionString="metadata=res://*/SmartMonitoringModel.csdl|res://*/SmartMonitoringModel.ssdl|res://*/SmartMonitoringModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-A0PSS5C;initial catalog=SmartMonitoring;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="SmartMonitoringEntities1" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-QQD7L2O;initial catalog=SmartMonitoring;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
