--- a/SmartMonitoring/SmartMonitoring.csproj
+++ b/SmartMonitoring/SmartMonitoring.csproj
@@ -213,6 +213,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Repository\RulesRepository.cs" />
     <Compile Include="Repository\ServerRepository.cs" />
     <Compile Include="schd_schedulers_data.cs">
       <DependentUpon>Model1.tt</DependentUpon>
