--- a/SmartMonitoring/SmartMonitoring.csproj
+++ b/SmartMonitoring/SmartMonitoring.csproj
@@ -92,6 +92,9 @@
     <Compile Include="CounterDetails.Designer.cs">
       <DependentUpon>CounterDetails.cs</DependentUpon>
     </Compile>
+    <Compile Include="C__EFMigrationsHistory.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="DAL\clsDBFunctions.cs" />
     <Compile Include="ExportCounter.cs">
       <SubType>Form</SubType>
@@ -258,6 +261,9 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="sys_settings.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="transaction_calculated.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="user.cs">
@@ -519,6 +525,11 @@
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
     <None Include="Resources\servers_groups.jpg" />
+    <None Include="Resources\cancel_32.png" />
+    <None Include="Resources\power.png" />
+    <None Include="Resources\search_24.png" />
+    <None Include="Resources\Search2_24.png" />
+    <None Include="Resources\Search2_16.png" />
     <Content Include="Resources\users.jpg" />
     <EmbeddedResource Include="Resources\error.wav" />
     <EmbeddedResource Include="Resources\message.wav" />
