--- a/SmartMonitoring/SmartMonitoring.csproj
+++ b/SmartMonitoring/SmartMonitoring.csproj
@@ -56,6 +56,10 @@
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Web" />
@@ -80,6 +84,7 @@
       <DependentUpon>AddAction.cs</DependentUpon>
     </Compile>
     <Compile Include="Common\Functions.cs" />
+    <Compile Include="Converter.cs" />
     <Compile Include="CounterData.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -274,9 +279,11 @@
     </Compile>
     <EmbeddedResource Include="AddAction.resx">
       <DependentUpon>AddAction.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="CounterData.resx">
       <DependentUpon>CounterData.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="CounterDetails.resx">
       <DependentUpon>CounterDetails.cs</DependentUpon>
