--- a/SmartMonitor_API/SmartMonitor_API/SmartMonitor.API/appsettings.json
+++ b/SmartMonitor_API/SmartMonitor_API/SmartMonitor.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-HPEA1S0\\SQLEXPRESS;Database=SmartMonitoring;Persist Security Info=True;User ID =sa; Password=123;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-HPEA1S0;Database=SmartMonitoring;Persist Security Info=True;User ID =sa; Password=123;MultipleActiveResultSets=true"
   }
 }
 //Scaffold-DbContext "Server=.\SQLEXPRESS;Database=SmartMonitoring;Persist Security Info=True;User ID =sa; Password=123;" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Models
