--- a/SmartMonitoring/SmartMonitoring.csproj
+++ b/SmartMonitoring/SmartMonitoring.csproj
@@ -101,6 +101,7 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="DAL\clsDBFunctions.cs" />
+    <Compile Include="Enum\Enums.cs" />
     <Compile Include="ExportCounter.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -113,6 +114,12 @@
     <Compile Include="frmServersGroupsConfigration.Designer.cs">
       <DependentUpon>frmServersGroupsConfigration.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSystemSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSystemSettings.Designer.cs">
+      <DependentUpon>frmSystemSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmUserConfigration.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -124,6 +131,9 @@
     </Compile>
     <Compile Include="MonitorErrors.Designer.cs">
       <DependentUpon>MonitorErrors.cs</DependentUpon>
+    </Compile>
+    <Compile Include="montr_transaction_calculated.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="NotificationRules.cs">
       <SubType>Form</SubType>
@@ -235,6 +245,9 @@
     <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Repository\RulesRepository.cs" />
     <Compile Include="Repository\ServerRepository.cs" />
+    <Compile Include="rule_events.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="schd_schedulers_data.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -268,9 +281,6 @@
     <Compile Include="sys_settings.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="transaction_calculated.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
     <Compile Include="user.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -293,6 +303,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmServersGroupsConfigration.resx">
       <DependentUpon>frmServersGroupsConfigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSystemSettings.resx">
+      <DependentUpon>frmSystemSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmUserConfigration.resx">
       <DependentUpon>frmUserConfigration.cs</DependentUpon>
